# libserialport

./: CMakeLists.txt  cmake.config.h.in  freebsd.c  libserialport.h  libserialport.h.cmake.in  libserialport_internal.h  linux.c  linux_termios.c  linux_termios.h  macosx.c  serialport.c  test_timing.c  timing.c  windows.c
